# miraveja-log

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: plan-miravejaLogRefactoring.prompt.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md
examples/: async_usage.py  basic_usage.py
logs/: async_example.json  example.json
src/miraveja_log/: __init__.py
src/miraveja_log/application/: __init__.py  configuration.py  logger_factory.py
src/miraveja_log/domain/: __init__.py  enums.py  exceptions.py  interfaces.py  models.py
src/miraveja_log/infrastructure/: __init__.py
src/miraveja_log/infrastructure/adapters/: __init__.py  async_python_logger_adapter.py  python_logger_adapter.py
src/miraveja_log/infrastructure/formatters/: __init__.py  json_formatter.py  text_formatter.py
src/miraveja_log/infrastructure/testing/: __init__.py  test_utilities.py
tests/integration/miraveja_log/: test_configuration_from_env.py  test_console_logging.py  test_end_to_end_async_logging.py  test_end_to_end_sync_logging.py  test_error_scenarios.py  test_file_logging.py  test_json_logging.py  test_structured_logging.py
tests/unit/miraveja_log/application/: test_configuration.py  test_logger_factory.py
tests/unit/miraveja_log/domain/: test_enums.py  test_exceptions.py  test_interfaces.py  test_models.py
tests/unit/miraveja_log/infrastructure/adapters/: test_async_python_logger_adapter.py  test_python_logger_adapter.py
tests/unit/miraveja_log/infrastructure/formatters/: __init__.py  test_json_formatter.py
tests/unit/miraveja_log/infrastructure/testing/: __init__.py
