[tool.poetry]
name = "miraveja-log"
version = "0.1.0"
description = "Lightweight and flexible logging library with structured logging support for Python"
authors = ["Jomar Júnior de Souza Pereira <jomarjunior@poli.ufrj.br>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/JomarJunior/miraveja-log"
repository = "https://github.com/JomarJunior/miraveja-log"
documentation = "https://github.com/JomarJunior/miraveja-log#readme"
keywords = [
    "logging",
    "logger",
    "structured-logging",
    "json-logging",
    "logging-library",
    "python-logging",
    "miraveja",
    "python"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
packages = [
    { include = "miraveja_log", from = "src" }
]

[tool.poetry.dependencies]
python = "<3.15,>=3.10"

# Type hints compatibility for Python 3.8-3.9
typing-extensions = "^4.12.0"
pydantic = "^2.12.4"
pylint-pydantic = "^0.4.1"

[tool.poetry.group.dev.dependencies]
# Testing framework with fixture support
pytest = "^8.2.0"
# Async test support for pytest
pytest-asyncio = "^1.3.0"
# Code coverage reporting for pytest
pytest-cov = "^7.0.0"
# Mocking library for pytest
pytest-mock = "^3.15.1"

# Code formatter for consistent style
black = "^25.11.0"
# Import statement sorter
isort = "^7.0.0"
# Python linter for code quality checks
pylint = "^4.0.3"
# Static type checker
mypy = "^1.18.2"
# Git hooks manager for automated checks
pre-commit = "^4.4.0"

# Pylint plugin for pytest compatibility
pylint-pytest = "^1.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["miraveja_log"]

[tool.pylint.master]
ignore = ["tests", "venv", ".venv", "build", "dist"]
jobs = 0
module-naming-style = "snake_case"
const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
function-naming-style = "snake_case"
method-naming-style = "snake_case"
attr-naming-style = "snake_case"
argument-naming-style = "snake_case"
variable-naming-style = "snake_case"
good-names = ["miraveja_log", "c", "T", "cls"]
load-plugins = ["pylint_pydantic"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0917",  # too-many-positional-arguments
    "W0622",  # redefined-builtin
    "W0718",  # broad-exception-caught
    "R0801",  # duplicate-code
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/miraveja_log",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=80"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
omit = [
    "__init__.py",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
